test/disabled/neg/macro-keyword-type.check
macro-keyword-type.scala:2: error: identifier expected but 'macro' found.
  type macro = Int
       ^
one error found
